tests/snapshots/examples_fixtures/type_system__failing__59_strict_module_public_effect_missing_with.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/59_strict_module_public_effect_missing_with.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/type_system/failing/59_strict_module_public_effect_missing_with.flx:2:5
  |
2 |     print(msg)
  |     ^^^^^^^^^^
  |     ---------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
